--- a/package.json
+++ b/package.json
@@ -8,10 +8,21 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.21",
+    "@fortawesome/pro-light-svg-icons": "^5.10.1",
+    "@fortawesome/pro-regular-svg-icons": "^5.10.1",
+    "@fortawesome/vue-fontawesome": "^0.1.6",
+    "bootstrap": "^4.3.1",
+    "bootstrap-vue": "^2.0.0-rc.27",
     "core-js": "^2.6.5",
+    "firebase": "^6.3.4",
+    "js-quantities": "^1.7.4",
+    "lodash": "^4.17.15",
+    "mathjs": "^6.0.4",
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
+    "vuefire": "^2.1.0",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
