--- a/package.json
+++ b/package.json
@@ -12,15 +12,18 @@
     "@fortawesome/pro-light-svg-icons": "^5.10.1",
     "@fortawesome/pro-regular-svg-icons": "^5.10.1",
     "@fortawesome/vue-fontawesome": "^0.1.6",
-    "bootstrap": "^4.3.1",
-    "bootstrap-vue": "^2.0.0-rc.27",
+    "accounting": "^0.4.1",
+    "bootstrap": "^4.4.1",
+    "bootstrap-vue": "^2.2.0",
     "core-js": "^2.6.5",
+    "countup": "^1.8.2",
     "firebase": "^6.3.4",
     "js-quantities": "^1.7.4",
     "lodash": "^4.17.15",
     "mathjs": "^6.0.4",
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.10",
+    "vue-multiselect": "^2.1.6",
     "vue-router": "^3.0.3",
     "vuefire": "^2.1.0",
     "vuex": "^3.0.1"
