--- a/.npmrc
+++ b/.npmrc
@@ -1,1 +1,2 @@
-@fortawesome:registry=https://npm.fontawesome.com/E63CE42F-5701-44CD-B08E-621158F9B8B2
+@fortawesome:registry=https://npm.fontawesome.com/
+//npm.fontawesome.com/:_authToken=E63CE42F-5701-44CD-B08E-621158F9B8B2
