--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "vue": "^2.6.11",
     "vue-multiselect": "^2.1.6",
     "vue-router": "^3.1.6",
+    "vue-select": "^3.10.1",
+    "vue-units": "^1.0.4",
     "vuefire": "^2.1.0",
     "vuex": "^3.1.3"
   },
