--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "lodash": "^4.17.15",
     "mathjs": "^6.5",
     "register-service-worker": "^1.6.2",
+    "vee-validate": "^3.3.0",
     "vue": "^2.6.11",
     "vue-multiselect": "^2.1.6",
     "vue-router": "^3.1.6",
