--- a/package.json
+++ b/package.json
@@ -8,39 +8,41 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.28",
-    "@fortawesome/pro-light-svg-icons": "^5.13.0",
-    "@fortawesome/pro-regular-svg-icons": "^5.13.0",
-    "@fortawesome/vue-fontawesome": "^0.1.9",
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/pro-light-svg-icons": "^5.15.4",
+    "@fortawesome/pro-regular-svg-icons": "^5.15.4",
+    "@fortawesome/vue-fontawesome": "^2.0.2",
     "accounting": "^0.4.1",
     "bootstrap": "^4.4.1",
-    "bootstrap-vue": "^2.11.0",
-    "core-js": "^2.6.5",
+    "bootstrap-vue": "^2.21.0",
+    "core-js": "^3.16.",
     "countup": "^1.8.2",
+    "countup.js": "^2.0.8",
     "firebase": "^7.8.0",
     "js-quantities": "^1.7.4",
     "lodash": "^4.17.15",
     "mathjs": "^6.5",
     "register-service-worker": "^1.6.2",
     "vee-validate": "^3.3.0",
-    "vue": "^2.6.11",
+    "vue": "^2.6.14",
+    "vue-countup-v2": "^4.0.0",
     "vue-multiselect": "^2.1.6",
-    "vue-router": "^3.1.6",
-    "vue-select": "^3.10.1",
+    "vue-router": "^3.5.2",
+    "vue-select": "^3.12.2",
     "vue-units": "^1.0.4",
     "vuefire": "^2.1.0",
-    "vuex": "^3.1.3"
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.9.0",
-    "@vue/cli-plugin-eslint": "^3.9.0",
-    "@vue/cli-plugin-pwa": "^3.9.0",
-    "@vue/cli-service": "^3.9.0",
-    "babel-eslint": "^10.0.1",
-    "eslint": "^5.16.0",
-    "eslint-plugin-vue": "^5.0.0",
-    "sass": "^1.18.0",
+    "@vue/cli-plugin-babel": "^4.5.13",
+    "@vue/cli-plugin-eslint": "^4.5.13",
+    "@vue/cli-plugin-pwa": "^4.5.13",
+    "@vue/cli-service": "^4.5.13",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^7.32.0",
+    "eslint-plugin-vue": "^7.16.0",
+    "sass": "^1.37.5",
     "sass-loader": "^7.1.0",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.14"
   }
 }
